# mediaSnare

./: .gitignore  Cargo.toml  README.md  build.rs  mediaSnare_production_notes_v1_6.md
build-aux/: cargo-build.sh  update-icon-cache.sh
data/: org.archerprojects.mediaSnare.gschema.xml
data/resources/: profiles.toml  resources.gresource.xml  style.css
mediaSnare/: README.md  meson.build  meson_options.txt
mediaSnare/build-aux/: build-deb.sh  compile-schemas.sh
mediaSnare/data/: mediasnare.desktop
mediaSnare/debian/: postinst
mediaSnare/src/: config.rs.in
mediaSnare/src/capture/: pipeline.rs  profile.rs  recording.rs
mediaSnare/src/portal/: screencast.rs  shell_screenshot.rs
mediaSnare/src/window/: main_window.rs
src/: application.rs  main.rs  settings.rs
src/capture/: audio.rs  mod.rs  screenshot.rs
src/portal/: mod.rs  notify.rs  screenshot.rs  types.rs
src/window/: mod.rs  recording_bar.rs  region_selector.rs
