[package]
name = "mediasnare"
version = "1.0.1"
authors = ["archerprojects <archer.projects@proton.me>"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/archerprojects/mediaSnare"

[profile.release]
lto = true

[profile.dev]
debug = 0
strip = "debuginfo"

[dependencies]
anyhow             = "1.0"
futures-util       = { version = "0.3", features = ["sink", "std"] }
gst                = { package = "gstreamer",       version = "0.22" }
gst-app            = { package = "gstreamer-app",   version = "0.22" }
gst-base           = { package = "gstreamer-base",  version = "0.22" }
gst-video          = { package = "gstreamer-video", version = "0.22" }
gst-audio          = { package = "gstreamer-audio", version = "0.22" }
image              = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
once_cell          = "1.19"
relm4              = { version = "0.10.1", features = ["macros", "libadwaita"] }
serde              = { version = "1.0", features = ["derive"] }
toml               = "1.0"
tokio              = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus               = { version = "5", features = ["tokio"] }
zvariant           = { version = "5" }
